--- a/postcard.html
+++ b/postcard.html
@@ -47,6 +47,44 @@
  ┍││┑             ┍││┑
  ╰──╯             ╰──╯
       </pre>
+      <pre class="asciiAlign">
+        ,/───`\
+      ,/ ▞     `\
+    ,/       ▄▄  `\
+   │|           ▘ |│
+   │|  ▄  ▞       |│
+   │|        ▔▔▌  |│
+   │|   ▙   ▘     |│
+ (=│|▋   . -౨ৎ. ▖ |│=)
+  ││|   // ^ \\▁  |││
+  ││| ▔()\ ▚▟/()  |││
+  │ |    .-'-.▔   | │
+  ││`\  //   \\  ,/││
+  ││  `\'|   |',/  ││
+  ││    `\───,/    ││
+  ││               ││
+ ┍││┑             ┍││┑
+ ╰──╯             ╰──╯
+      </pre>
+      <pre class="asciiAlign">
+          ,/───`\
+        ,/       `\
+      ,/           `\
+     │|             |│
+     │|             |│
+     │|             |│
+     │|             |│
+   (=│|    . -౨ৎ.   |│=)
+    ││|   // ^ \\   |││
+    ││|  ()\   /()  |││
+    │ |    .-'-.    | │
+    ││`\  //   \\  ,/││
+    ││  `\'|   |',/  ││
+    ││    `\───,/    ││
+    ││               ││
+   ┍││┑             ┍││┑
+   ╰──╯             ╰──╯
+      </pre>
     </div>
   </div>
   <script>
