--- a/street.html
+++ b/street.html
@@ -134,7 +134,7 @@ Oh... she was waving at her friend.
       let asciiArt = document.getElementById('ascii-art');
 
       if (currentFrame === 39 || currentFrame === 45) {
-          window.location.href = 'classroom.html';
+          window.location.href = 'crossing.html';
           return;
       }
 
@@ -153,7 +153,7 @@ Oh... she was waving at her friend.
         document.body.style.opacity = 0;
 
         setTimeout(function() {
-            window.location.href = 'classroom.html';
+            window.location.href = 'crossing.html';
           }, 2000);
         }
 
