--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
   <div id="container">
     <div id="container">
-      <pre class="pointer asciiAlign" onclick="goToExperience()">
+      <pre class="pointer asciiAlign" onclick="goToMorning()">
 ╭────── ˚₊‧꒰ა ☆ ໒꒱‧₊˚ ──────┒
 │                          ┃
 │        Experience        ┃
@@ -46,8 +46,8 @@
     </div>
   </div>
   <script>
-    function goToExperience() {
-      window.location.href = 'experience.html';
+    function goToMorning() {
+      window.location.href = 'morning.html';
     }
   </script>
 </body>
